--- a/7.1/index.html
+++ b/7.1/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Welcome to Section 7.1</h1>
-    <p>This is the content for section 7.1.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Isagi 7.1</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <span class="logo">
+          <img src="./logo.png" alt="" />
+          <h5>Isagi's card</h5>
+        </span>
+        <img src="./chip.png" alt="" class="chip" />
+      </header>
+      <div class="card-details">
+        <div class="name-number">
+          <h6>karta raqam</h6>
+          <h5 class="number">9860 0406 1424 0592</h5>
+          <h5 class="name">Isagi Youchi</h5>
+        </div>
+        <div class="valid-date">
+          <h6>Muddati</h6>
+          <h5>01/30</h5>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
